--- a/css/styles.css
+++ b/css/styles.css
@@ -387,7 +387,7 @@ input[type="checkbox"] {
 
 /* Tarjetas para cada elemento */
 .card {
-  background-color: #f4f4f4;
+  background-color: transparent;
   width: 150px;
   height: 70px;
   border-radius: 50px;
@@ -402,7 +402,7 @@ input[type="checkbox"] {
 }
 
 .card:hover {
-  background-color: #ddd;
+  background-color: transparent;
 }
 
 .logo {
@@ -915,13 +915,16 @@ input[type="checkbox"] {
   margin: 0 auto;
 }
 
+.tab-content .card {
+  text-decoration: none;
+}
 
 /*======================================
 =           BOTÓN DE AYUDA             =
 ======================================*/
 .help-button {
   position: fixed;
-  bottom: 80px;
+  bottom: 50px;
   left: 20px;
   width: 50px;
   height: 50px;
