--- a/css/styles.css
+++ b/css/styles.css
@@ -567,7 +567,7 @@ input[type="checkbox"] {
 }
 
 .card button {
-  border: none;
+  border: transparent;
   padding: 0.6rem 1.2rem;
   margin: 0.3rem;
   cursor: pointer;
